# voxeljourney

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  config.ini
assets/shaders/: basic.frag  basic.vert
src/assets/: Asset.h  AssetHandle.cpp  AssetHandle.h  AssetManager.h  Material.cpp  Material.h  Model.cpp  Model.h  Shader.cpp  Shader.h  StringHash.h  Texture.cpp  Texture.h  UUID.h
src/core/: Application.cpp  Application.h  Config.cpp  Config.h  Event.h  EventBus.h  Input.cpp  Input.h  MemoryUtils.h  StatsTracker.cpp  StatsTracker.h  Timer.h  Window.cpp  Window.h  main.cpp
src/render/: Frustum.h  GlBuffer.cpp  GlBuffer.h  GlUtils.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
src/scene/: Camera.cpp  Camera.h  Light.h  Player.cpp  Player.h  Renderable.h  Scene.cpp  Scene.h  Sky.h  Sun.cpp  Sun.h  Transform.h
